--- a/server/static/App.css
+++ b/server/static/App.css
@@ -1,3 +1,7 @@
+a:hover {
+    cursor:pointer;
+}
+
 .btn.col-4 {
     margin-top: 10px;
 }
@@ -36,6 +40,6 @@
     margin: 1.75rem auto;
 }
 
-.card.col-6 {
+.card.col-10 {
     margin: auto;
 }
