fixed some bugs.

--- a/server/static/App.css
+++ b/server/static/App.css
@@ -1,3 +1,7 @@
+.jumbotron {
+    background-image: url("https://cambriausa.widen.net/content/ldydi1h7kw/webp/Salt%20lake_Gensler_4x4_600x600_20.jpg.webp?crop=true&keep=c&color=ffffff00&u=s5d92w&w=600&h=600")
+}
+
 a:hover {
     cursor: pointer;
 }
